--- a/src/fxml/patientsStats.fxml
+++ b/src/fxml/patientsStats.fxml
@@ -15,7 +15,7 @@
       <PieChart fx:id="genderPieChart" layoutX="14.0" layoutY="141.0" prefHeight="154.0" prefWidth="176.0" />
       <PieChart fx:id="agesPieChart" layoutX="289.0" layoutY="141.0" prefHeight="154.0" prefWidth="176.0" />
       <PieChart fx:id="weightPieChart" layoutX="561.0" layoutY="141.0" prefHeight="154.0" prefWidth="176.0" />
-      <PieChart fx:id="sizePieChart" layoutX="22.0" layoutY="366.0" prefHeight="154.0" prefWidth="176.0" />
+      <PieChart fx:id="sizePieChart" layoutX="22.0" layoutY="340.0" prefHeight="154.0" prefWidth="176.0" />
       <PieChart fx:id="waitListPieChart" layoutX="289.0" layoutY="366.0" prefHeight="154.0" prefWidth="176.0" />
       <Text fx:id="totalMen" layoutX="20.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cantidad hombres:" wrappingWidth="139.90625" />
       <Text fx:id="totalWomen" layoutX="20.0" layoutY="330.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cantidad mujeres:" wrappingWidth="139.90625" />
@@ -25,7 +25,11 @@
          </font>
       </Text>
       <Button layoutX="22.0" layoutY="96.0" mnemonicParsing="false" onMouseClicked="#createCharts" text="Cargar estadísticas" />
-      <Text fx:id="minAgeRanked" layoutX="299.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Menor rango de edad:" wrappingWidth="154.90625" />
-      <Text fx:id="maxAgeRanked" layoutX="299.0" layoutY="330.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mayor rango de edad:" wrappingWidth="167.13671875" />
+      <Text fx:id="minAgeRanked" layoutX="299.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Menor edad registrada:" wrappingWidth="154.90625" />
+      <Text fx:id="maxAgeRanked" layoutX="299.0" layoutY="330.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mayor edad registrada:" wrappingWidth="167.13671875" />
+      <Text fx:id="maxWeightRanked" layoutX="584.0" layoutY="330.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mayor peso registrado:" wrappingWidth="192.13671875" />
+      <Text fx:id="minWeightRanked" layoutX="584.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Menor peso registrado:" wrappingWidth="184.90625" />
+      <Text fx:id="minSizeRanked" layoutX="22.0" layoutY="507.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Menor altura registrada:" wrappingWidth="167.13671875" />
+      <Text fx:id="maxSizeRanked" layoutX="22.0" layoutY="532.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mayor altura registrada:" wrappingWidth="184.90625" />
    </children>
 </AnchorPane>
